compiler/fir/analysis-tests/testData/resolve/diagnostics/selfTypeForAnnotation.kt
// FIR_DISABLE_LAZY_RESOLVE_CHECKS
import kotlin.Self
<!SELF_TYPE_INAPPLICABLE_TARGET!>@Self<!>
annotation class AnnotationClass {

}
